--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
+pytest-django = "^4.11.1"
+pytest-asyncio = "^1.0.0"
 
